--- a/pilight.h.in
+++ b/pilight.h.in
@@ -38,6 +38,7 @@
 #cmakedefine PROTOCOL_CONRAD_RSL_SWITCH
 #cmakedefine PROTOCOL_CONRAD_RSL_CONTACT
 #cmakedefine PROTOCOL_DS18B20
+#cmakedefine PROTOCOL_DHT11
 #cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
 #cmakedefine PROTOCOL_GENERIC_DIMMER
