This commit adds multiple simultanious hardware support
Previously, pilight could only send and receive from one hardware
module at the same time. This greatly limited pilight to mainly
433.92Mhz devices. With this commit, pilight can receive and
send from various hardware modules at the same time. E.g.,
you should be able to receive from 433.92Mhz, 315Mhz and 868Mhz
simultaniously. When sending a code, the pilight automatically
picks the right hardware module.

To allow this, the hardware settings in the settings file have
been moved to a separate file. This file is very similar to
the configuration file. Therefore the "hardware-file" has been
introduced.

The wiki will soon be updated with this new structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,6 +287,10 @@ if(NOT EXISTS "/etc/pilight/settings.json")
 	install(FILES settings.json-default DESTINATION /etc/pilight/ RENAME settings.json) 
 endif()
 
+if(NOT EXISTS "/etc/pilight/hardware.json")
+	install(FILES hardware.json DESTINATION /etc/pilight/) 
+endif()
+
 add_executable(pilight-daemon daemon.c)
 target_link_libraries(pilight-daemon pilight_shared)
 target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
