--- a/Makefile.old
+++ b/Makefile.old
@@ -27,6 +27,8 @@ SRC = $(wildcard *.c)
 INCLUDES = $(wildcard protocols/*.h) $(wildcard protocols/*.c) $(wildcard hardware/*.h) $(wildcard hardware/*.c) $(wildcard libs/pilight/*.h) $(wildcard libs/websockets/*.c) $(wildcard libs/websockets/*.h) $(wildcard libs/websockets/*.c)
 PROGAMS = $(patsubst %.c,pilight-%,$(SRC))
 LIBS = libs/pilight/pilight.o libs/protocols/protocols.o libs/hardware/hardware.o libs/websockets/websockets.o
+WEBFILES := $(shell cd web && find * -type f)
+WEBDIRS := $(shell cd web && find * -type d )
 
 .PHONY: subdirs $(SUBDIRS)
 
@@ -70,7 +72,9 @@ install:
 	install -m 0755 -d /usr/local/lib/pilight/
 	install -m 0755 -d /usr/local/sbin
 	install -m 0755 -d /etc/pilight
-	install -m 0755 -d /usr/local/share/pilight/
+	for f in $(WEBDIRS) ; do \
+		install -m 0755 -d /usr/local/share/pilight/$$f; \
+	done
 	install -m 0655 pilight-daemon /usr/local/sbin/
 	install -m 0655 pilight-send /usr/local/sbin/
 	install -m 0655 pilight-receive /usr/local/sbin/
@@ -81,20 +85,14 @@ install:
 	install -m 0655 libpilight.so /usr/local/lib/pilight/
 	install -m 0655 libpilight.a /usr/local/lib/pilight/
 	install -m 0644 settings.json-default /etc/pilight/
-	install -m 0644 web/index.html /usr/local/share/pilight/
-	install -m 0644 web/pilight.css /usr/local/share/pilight/
-	install -m 0644 web/pilight.js /usr/local/share/pilight/
-	install -m 0644 web/favicon.ico /usr/local/share/pilight/
-	install -m 0644 web/logo.png /usr/local/share/pilight/
-	install -m 0644 web/battery_green.png /usr/local/share/pilight/
-	install -m 0644 web/battery_red.png /usr/local/share/pilight/
-	install -m 0644 web/apple-touch-icon-iphone-retina-display.png /usr/local/share/pilight/
-	install -m 0644 web/apple-touch-icon-ipad.png /usr/local/share/pilight/
-	install -m 0644 web/apple-touch-icon-iphone.png /usr/local/share/pilight/
-	#install -m 0755 init/pilight /etc/init.d/
+	for f in $(WEBFILES) ; do \
+		cd web/ && install -D $$f /usr/local/share/pilight/`dirname $$f` || true && cd ..; \
+	done
+	install -m 0755 init/pilight /etc/init.d/
 	update-rc.d pilight defaults
 
 	[ ! -f /etc/pilight/settings.json ] && mv /etc/pilight/settings.json-default /etc/pilight/settings.json || true
+	[ ! -f /etc/pilight/hardware.json ] && cp hardware.json /etc/pilight/ || true
 	mv /usr/local/lib/pilight/libpilight.so /usr/local/lib/pilight/libpilight.so.2
 	ln -sf /usr/local/lib/pilight/libpilight.so.2 /usr/local/lib/libpilight.so
 	ldconfig
