This commit greatly improves the pilight node feature.
Previously, pilight wasn't capable of handling sensors and relay's
connected to other pilight instances then the main daemon was
running on. This has changed by implementing unique UUID's for
each device pilight is running on. In the configuration file
you can define which sensor or relay is connected to which device
by defining the appropriate UUID:

{
   "location": {
      "name": "location",
      "device": {
         "name": "device",
         "uuid": "0000-00-00-00-000000",
         "protocol": [ "relay" ],
         "id": [{
            "gpio": 3
         }],
         "state": "off"
      }
   }
}

pilight nodes will now try to automatically reconnect to the
main pilight daemon when the connection is lost. This makes
using multiple raspberry pi with pilight much easier to
manage.

A new pilight client has been added called pilight-uuid.
This will output the uuid of the specific device which
can be used in the configuration file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -326,6 +326,12 @@ target_link_libraries(pilight-debug ${CMAKE_DL_LIBS})
 target_link_libraries(pilight-debug m)
 target_link_libraries(pilight-debug ${CMAKE_THREAD_LIBS_INIT})
 
+add_executable(pilight-uuid uuid.c)
+target_link_libraries(pilight-uuid pilight_shared)
+target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-uuid m)
+target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
+
 install(PROGRAMS pilight-daemon DESTINATION sbin)
 install(PROGRAMS pilight-raw DESTINATION sbin)
 install(PROGRAMS pilight-send DESTINATION sbin)
@@ -333,6 +339,7 @@ install(PROGRAMS pilight-control DESTINATION sbin)
 install(PROGRAMS pilight-learn DESTINATION sbin)
 install(PROGRAMS pilight-receive DESTINATION sbin)
 install(PROGRAMS pilight-debug DESTINATION sbin)
+install(PROGRAMS pilight-uuid DESTINATION sbin)
 install(SCRIPT cmake_postinstall.cmake)
 
 WRITE_UNINSTALL_TARGET_SCRIPT()
