--- a/libs/pilight/Makefile
+++ b/libs/pilight/Makefile
@@ -23,29 +23,30 @@ ifneq (, $(findstring amd64, $(SYS)))
 endif
 CFLAGS = -ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -isystem. -isystem..
 SRC = $(wildcard *.c)
-OBJS = $(filter-out wiringPi.o http_lib.o json.o update.o, $(SRC:.c=.o))
+OBJS = $(filter-out wiringPi.o wiringPiI2C.o http_lib.o json.o update.o, $(SRC:.c=.o))
 
-
-all: json.o wiringPi.o http_lib.o update.o $(OBJS) pilight.o
+all: json.o wiringPi.o wiringPiI2C.o http_lib.o update.o $(OBJS) pilight.o
 
 json.o: json.c json.h
 	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -c $(patsubst %.o,%.c,$@)
 
 http_lib.o: http_lib.c http_lib.h
-	$(info $(GCC))
 	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -c $(patsubst %.o,%.c,$@)
 	
 wiringPi.o: wiringPi.c wiringPi.h
-	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -pthread -lm -c $(patsubst %.o,%.c,$@)
+	$(GCC) -ffast-math $(OSFLAGS) -w -g -isystem. -isystem.. -pthread -lm -c $(patsubst %.o,%.c,$@)
 
+wiringPiI2C.o: wiringPiI2C.c wiringPiI2C.h
+	$(GCC) -ffast-math $(OSFLAGS) -w -g -isystem. -isystem.. -pthread -lm -c $(patsubst %.o,%.c,$@)
+	
 update.o: update.c update.h
 	$(GCC) $(CFLAGS) -lz -c $(patsubst %.o,%.c,$@) -isystem. -isystem.. $(INCLUDE)
 
 %.o: %.c %.h 
 	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
-pilight.o: $(OBJS) json.o http_lib.o wiringpi.o update.o
-	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) json.o http_lib.o wiringpi.o update.o -o pilight.o
+pilight.o: $(OBJS) json.o http_lib.o wiringPi.o wiringPiI2C.o update.o
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) json.o http_lib.o wiringPi.o wiringPiI2C.o update.o -o pilight.o
 
 dist-clean: clean
 
