Never let logfile grow larger than 1mb, also check if logfile was deleted by the user

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -88,6 +88,7 @@
 #define CONFIG_FILE				"/etc/pilight/config.json"
 #define LOG_FILE				"/var/log/pilight.log"
 #define SETTINGS_FILE			"/etc/pilight/settings.json"
+#define LOG_MAX_SIZE 			1048576 // 1024*1024
 
 #define SEND_REPEATS			10
 #define RECEIVE_REPEATS			1
