Added native support for the weather underground api

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -65,6 +65,7 @@
 #cmakedefine PROTOCOL_REV
 #cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
+#cmakedefine PROTOCOL_WUNDERGROUND
 
 /* Hardware support */
 
