Added open weather map protocol

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -59,6 +59,7 @@
 #cmakedefine PROTOCOL_LM76
 #cmakedefine PROTOCOL_MUMBI_SWITCH
 #cmakedefine PROTOCOL_NEXA_SWITCH
+#cmakedefine PROTOCOL_OPENWEATHERMAP
 #cmakedefine PROTOCOL_POLLIN_SWITCH
 #cmakedefine PROTOCOL_RAW
 #cmakedefine PROTOCOL_RELAY
