Added Silvercrest protocol draft

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -66,6 +66,7 @@
 #cmakedefine PROTOCOL_REV
 #cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
+#cmakedefine PROTOCOL_SILVERCREST
 #cmakedefine PROTOCOL_WUNDERGROUND
 
 /* Hardware support */
