--- a/pilight.h.in
+++ b/pilight.h.in
@@ -88,7 +88,7 @@
 
 #define MAX_CLIENTS				30
 #define BUFFER_SIZE				1025
-#define BIG_BUFFER_SIZE			1024001
+#define EOSS					"\n\n" // End Of Socket Stream
 
 #define PID_FILE				"/var/run/pilight.pid"
 #define CONFIG_FILE				"/etc/pilight/config.json"
