--- a/pilight.h.in
+++ b/pilight.h.in
@@ -79,26 +79,30 @@
 #define PULSE_DIV				34
 
 #ifdef WEBSERVER
-	#define WEBSERVER_PORT		5001
-	#define WEBSERVER_ROOT		"/usr/local/share/pilight/"
-	#define WEBSERVER_ENABLE	1
-	#define WEBSERVER_CACHE		1
-	#define WEBGUI_TEMPLATE		"default"
+	#define WEBSERVER_PORT			5001
+	#define WEBSERVER_ROOT			"/usr/local/share/pilight/"
+	#define WEBSERVER_ENABLE		1
+	#define WEBSERVER_CACHE			1
+	#define WEBGUI_TEMPLATE			"default"
+	#define MAX_UPLOAD_FILESIZE 	5242880
+	#define MAX_CACHE_FILESIZE 		1048576
+	#define WEBSERVER_WORKERS		1
+	#define WEBSERVER_CHUNK_SIZE 	4096
 #endif
 
-#define MAX_CLIENTS				30
-#define BUFFER_SIZE				1025
-#define EOSS					"\n\n" // End Of Socket Stream
+#define MAX_CLIENTS					30
+#define BUFFER_SIZE					1025
+#define EOSS						"\n\n" // End Of Socket Stream
 
-#define PID_FILE				"/var/run/pilight.pid"
-#define CONFIG_FILE				"/etc/pilight/config.json"
-#define LOG_FILE				"/var/log/pilight.log"
-#define SETTINGS_FILE			"/etc/pilight/settings.json"
-#define LOG_MAX_SIZE 			1048576 // 1024*1024
+#define PID_FILE					"/var/run/pilight.pid"
+#define CONFIG_FILE					"/etc/pilight/config.json"
+#define LOG_FILE					"/var/log/pilight.log"
+#define SETTINGS_FILE				"/etc/pilight/settings.json"
+#define LOG_MAX_SIZE 				1048576 // 1024*1024
 
-#define SEND_REPEATS			10
-#define RECEIVE_REPEATS			1
-#define UUID_LENGTH				21
+#define SEND_REPEATS				10
+#define RECEIVE_REPEATS				1
+#define UUID_LENGTH					21
 
 #ifdef UPDATE
 	#define UPDATE_MIRROR			"http://apt.pilight.org/mirror.txt"
