--- a/pilight.h.in
+++ b/pilight.h.in
@@ -60,6 +60,7 @@
 #cmakedefine PROTOCOL_REV
 #cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
+#cmakedefine PROTOCOL_THREECHAN
 
 /* Hardware support */
 
