This commits add the developmental version to the API config
New features of pilight can break existing apps and plugins.
By introducing the developmental version string in the
version array, apps developers can implement support for
each of these versions, or let users know a newer version
is not yet supported.

--- a/Makefile.old
+++ b/Makefile.old
@@ -35,7 +35,7 @@ WEBDIRS := $(shell cd web && find * -type d )
 subdirs: $(SUBDIRS) all
 
 $(SUBDIRS):
-	$(MAKE) -C $@
+	$(MAKE) -C $@ GIT_HASH=$(GIT_HASH)
 
 all: $(LIBS) libpilight.so libpilight.a $(PROGAMS) 
 
