Add Teknihall protocol

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -68,6 +68,7 @@
 #cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
 #cmakedefine PROTOCOL_SILVERCREST
+#cmakedefine PROTOCOL_TEKNIHALL
 #cmakedefine PROTOCOL_THREECHAN
 #cmakedefine PROTOCOL_WUNDERGROUND
 
