--- a/pilight.h.in
+++ b/pilight.h.in
@@ -43,6 +43,8 @@
 #cmakedefine PROTOCOL_DHT11
 #cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
+#cmakedefine PROTOCOL_EV1527_CONTACT
+#cmakedefine PROTOCOL_EV1527_MOTION
 #cmakedefine PROTOCOL_GENERIC_DIMMER
 #cmakedefine PROTOCOL_GENERIC_SWITCH
 #cmakedefine PROTOCOL_GENERIC_WEATHER
