--- a/pilight.h.in
+++ b/pilight.h.in
@@ -91,6 +91,7 @@
 	#define MAX_CACHE_FILESIZE 		1048576
 	#define WEBSERVER_WORKERS		1
 	#define WEBSERVER_CHUNK_SIZE 	4096
+	#define WEBSERVER_USER 			"www-data"
 #endif
 
 #define MAX_CLIENTS					30
