--- a/pilight.h.in
+++ b/pilight.h.in
@@ -71,6 +71,7 @@
 #cmakedefine PROTOCOL_TEKNIHALL
 #cmakedefine PROTOCOL_THREECHAN
 #cmakedefine PROTOCOL_WUNDERGROUND
+#cmakedefine PROTOCOL_X10
 
 /* Hardware support */
 
