Fixed compilation bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,6 +367,7 @@ endif()
 add_executable(pilight-daemon daemon.c)
 target_link_libraries(pilight-daemon pilight_shared)
 target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-daemon m)
 target_link_libraries(pilight-daemon ${CMAKE_THREAD_LIBS_INIT})
 
 if(${UPDATE} MATCHES "ON")
@@ -376,27 +377,31 @@ endif()
 add_executable(pilight-raw raw.c)
 target_link_libraries(pilight-raw pilight_shared)
 target_link_libraries(pilight-raw ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-raw m)
 target_link_libraries(pilight-raw ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(pilight-send send.c)
 target_link_libraries(pilight-send pilight_shared)
 target_link_libraries(pilight-send ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-send m)
 target_link_libraries(pilight-send ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(pilight-control control.c)
 target_link_libraries(pilight-control pilight_shared)
 target_link_libraries(pilight-control ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-control m)
 target_link_libraries(pilight-control ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(pilight-learn learn.c)
 target_link_libraries(pilight-learn pilight_shared)
-target_link_libraries(pilight-learn m)
 target_link_libraries(pilight-learn ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-learn m)
 target_link_libraries(pilight-learn ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(pilight-receive receive.c)
 target_link_libraries(pilight-receive pilight_shared)
 target_link_libraries(pilight-receive ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-receive m)
 target_link_libraries(pilight-receive ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(pilight-debug debug.c)
